# Xorion-Ecosystem

./: .cargoignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/webapp-dashboard/: Cargo.toml  index.html
apps/webapp-dashboard/src/: app.rs  explorer.rs  main.rs  rpc.rs  session.rs
apps/webapp-dashboard/src/components/: dashboard.rs  receive.rs  send.rs  settings.rs
browser-extension/: manifest.json  popup.html  popup.js
docs/: DESIGN_SYSTEM.md
modules/governance/: README.md
modules/storage/: README.md
modules/storage/examples/: storage_demo.rs
modules/storage/src/: lib.rs
modules/storage/tests/: storage_tests.rs
node/: Cargo.toml
sdk/wallet-core/: Cargo.toml
src/: kernel.rs
website/: index.html
website/css/: style.css
website/js/: main.js
xos-governance/: Cargo.toml
xos-governance/examples/: governance_demo.rs
xos-governance/src/: lib.rs
xos-governance/tests/: governance_tests.rs
xos-gui/: Cargo.toml
xos-gui/src/: main.rs
xos-privacy/: README.md
xos-privacy/examples/: privacy_demo.rs
xos-privacy/tests/: privacy_tests.rs
xos-runtime/: README.md
xos-scheme/: Cargo.toml
xos-scheme/src/: handler.rs  main.rs
xos-storage/: Cargo.toml
