[workspace]
members = [".", "xos-scheme", "xos-gui", "xos-runtime", "xos-privacy", "xos-storage", "xos-governance"]

[package]
name = "xorion-sdk"
repository = "https://github.com/IDevNation/Xorion-Web3-Beta-Multi-Chain-Wallet-SDK"
version = "1.0.0"
edition = "2021"
description = "Multi-chain wallet SDK for X-OS Web3 OS"
license = "MIT"

[dependencies]
# Phase 1 — wallet & key derivation
bip39 = "2.0"
bip32 = "0.5"
secp256k1 = { version = "0.28", features = ["rand"] }
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.6", features = ["derive"] }
log = "0.4"

# Phase 2 — RPC & transaction broadcasting
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1"

# Phase 3 — smart contract interaction
ethabi = "18.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
