[package]
name = "xos-webapp"
version = "1.0.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
dioxus-router = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# ?? FINAL FIXED FEATURES
web-sys = { version = "0.3", features = ["Window", "Storage", "Navigator", "Clipboard", "console"] }

getrandom = { version = "0.2", features = ["js"] }

gloo-net = "0.4"
